Numerical section and Conclusion are completed

--- a/main.tex
+++ b/main.tex
@@ -24,6 +24,8 @@
 \usepackage{amsmath,euscript,mathrsfs}
 \usepackage{amssymb,amsfonts,latexsym,mathtools}
 
+\usepackage{caption}
+
 % Graphics
 \usepackage{graphicx,setspace,subcaption}
 \usepackage[usenames,dvipsnames,svgnames]{xcolor}
@@ -477,9 +479,9 @@ P_{xr} &= T(x, t) \quad \mbox{при} \quad r = R \label{2_bc_rx}.
 Поскольку компонента $ P_{\varphi r} \equiv 0 $, третье граничное условие $P_{\varphi r} = 0$ при $r = R$ выполняется автоматически.
 
 
-\section{Вывод уравнения типа Буссинеска с внешним воздействием} 
-\subsection{Вывод с помощью степенных разложений по радиусу}
+\section{Вывод уравнения типа Буссинеска с внешним воздействием}
 \label{sec:derivation}
+\subsection{Вывод с помощью степенных разложений по радиусу}
 %\label{s:power_series_exp}
 Подход к выводу уравнения модели в этом разделе опирается на метод, описанный в~\cite{DF}. Упростим этот метод с помощью разложений, использованных для вывода линейной модели~\cite{bostrm2000}. Таким образом, будем искать решение в виде степенного ряда по радиальной координате:
 %Our approach  to the derivation of the model equation in this section is essentially similar to the derivation in \cite{DF}, but we simplify it by adopting expansions used in the derivation of the linear model in \cite{bostrm2000}. Thus, we look for a solution of the  problem in the form of power series expansions of the displacements in the radial coordinate:
@@ -1002,9 +1004,9 @@ u_{tt} - \left(c^2 + \kappa\frac{\beta_1}{\rho}\right) u_{xx} - \frac{2}{\rho}\l
 & \left(1 + \frac{\nu^2}{2} \overline{k}^2\right) \overline{\omega}^2 - \overline{k}^2 = 0,
 \end{align}
 для решения Похгаммера-Кри и уравнений (\ref{eq_dim_free_surf}, $i=1,2$), \eqref{eq_dim_SP} и \eqref{eq_dim_OS} соответственно. Здесь $\overline{k} = k R$, $\overline{\omega} = \omega R / c$, где $k$ и $\omega$ -- волновое число и волновая частота соответственно, $J_i$ -- функция Бесселя первого рода, а параметры $p$ и $q$ выражаются следующим образом:
-\begin{equation}
-p^2 = \frac{\rho \omega^2}{\lambda + 2\mu} - k^2, \quad q^2 = \frac{\rho \omega^2}{\mu} - k^2.
-\end{equation}
+\begin{equation*}
+p^2 = \frac{\rho \overline{\omega}^2}{\lambda + 2\mu} - \overline{k}^2, \quad q^2 = \frac{\rho \overline{\omega}^2}{\mu} - \overline{k}^2.
+\end{equation*}
 
 \begin{figure}[h]
 	\centering
@@ -1037,7 +1039,9 @@ B_4 &= \sqrt{\frac{A\beta_1}{(6E + 2A\beta_1)\nu^2 R^2}},
 \end{align}
 для уравнений \eqref{eq_dim_free_surf}, \eqref{eq_dim_SP} и \eqref{eq_dim_OS} соответственно.
 
-На рисунке \ref{fig:soliton} в левой части изображены четыре солитона сжатия, задаваемых формулами (\ref{soliton}) -- (\ref{B4}) и имеющих амплитудный параметр $A = -0.05$. Все четыре солитона имеют разную длину, причём <<регуляризованный>> солитон (\ref{B4}) самый длинный. Однако солитоны такой амплитуды вызывают напряжения близкие к пределу упругости для полистирола. В экспериментах с полистироловым стержнем, описанных в~\cite{Garbuzov}, амплитуда очень мала: $A \sim 10^{-3} - 10^{-4}$, следовательно, в главном порядке по $A$ во всех четырёх формулах параметр длины примерно равен
+На рисунке \ref{fig:soliton} в левой части изображены четыре солитона сжатия, задаваемых формулами \eqref{soliton} -- \eqref{B4} и имеющих амплитудный параметр $A = -0.05$.  <<Регуляризованный>> солитон \eqref{B4} и солитон (\ref{Bi}, $i=1$) практически полностью совпадают и являются самыми длинными из всех.
+%Все четыре солитона имеют разную длину, причём <<регуляризованный>> солитон \eqref{B4} самый длинный. 
+Однако солитоны такой амплитуды вызывают напряжения близкие к пределу упругости для полистирола. В экспериментах с полистироловым стержнем, описанных в~\cite{Garbuzov}, амплитуда очень мала: $A \sim 10^{-3} - 10^{-4}$, следовательно, в главном порядке по $A$ во всех четырёх формулах параметр длины примерно равен
 %In the left part of the Figure \ref{fig:soliton} we plot the four solitons given by the formulae (\ref{soliton}) - (\ref{B4}) for one and the same value of the amplitude parameter $A = -0.05$ and the same elastic moduli shown in Table \ref{tab:ps} (typical for a polystyrene \cite{HughesKelly}). We can see that the four solitons have a different width, with the regularised soliton (\ref{B4}) being the widest. However, this figure is plotted for the value of $A$ which exceeds the yield point for the polystyrene, and therefore in practice this difference would not be important for that particular material (but could be important for some other materials). Indeed, in experiments with polystyrene discussed in the next section the value of $A$ is very small, $A \sim 10^{-3} - 10^{-4}$. Therefore, to leading order in $A$, all four formulae will give the width parameter approximately equal to 
 \begin{equation}\label{}
 B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
@@ -1051,6 +1055,9 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 	\label{fig:soliton}
 \end{figure}
 \begin{table}[h]
+	\captionsetup{justification=raggedleft,singlelinecheck=false}
+	\caption{Упругие модули полистирола~\cite{HughesKelly}.}
+	\vspace{-5mm}
 	\begin{center}
 		\begin{tabular}{|c|c|c|c|c|c|}
 			\hline
@@ -1062,12 +1069,10 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 			\hline
 		\end{tabular}
 	\end{center}
-	\vspace{-5mm}
-	\caption{Упругие модули полистирола~\cite{HughesKelly}.}
 	\label{tab:ps}
 \end{table}
 
-На рисунке~\ref{fig:rod_deformed} показано, как выглядит деформированный стержень, когда по нему бежит солитон сжатия. Увеличенные перемещения позволяют увидеть эффект Пуассона (утолщение тела при продольном сжатии), а также нелинейную зависимость продольного перемещения от $r$ (вертикальные линии немного изгибаются в месте сжатия). На всякий случай напомним, что на рисунке~\ref{fig:soliton} изображён график продольной деформации на оси стержня, а не форма границы стержня на рисунке~\ref{fig:rod_deformed}. 
+На рисунке~\ref{fig:rod_deformed} показано, как выглядит деформированный стержень, когда по нему бежит солитон сжатия. Увеличенные перемещения позволяют увидеть эффект Пуассона (утолщение тела при продольном сжатии), а также нелинейную зависимость продольного перемещения от~$r$ (вертикальные линии немного изгибаются в месте сжатия). На всякий случай напомним, что на рисунке~\ref{fig:soliton} изображён график продольной деформации на оси стержня, а не форма границы стержня на рисунке~\ref{fig:rod_deformed}. 
 \begin{figure}[hh]
 	\centering
 	\includegraphics[width=0.6\linewidth]{4a_DeformedRod1}
@@ -1278,7 +1283,7 @@ j_1 = 0,\dots, N_1-1, \quad &j_2 = 0,\dots, N_2-1,\\
 %Отметим, что для реализации периодических условий по $x$, 
 
 Пример сетки с двумя доменами вдоль оси $x$ представлен на рисунке \ref{fig:grid}, где для дискретизации по $x$ и по $r$ используется базис Лежандра, причём по $x$ в качестве точек коллокации выбираются точки Гаусса-Лобатто, включающие границы, а по $r$ --- точки Гаусса-Радо, чтобы исключить центральную точку стержня ($r=0$). По $\varphi$ используется базис Фурье с равномерно распределёнными по интервалу $(0, 2\pi)$ точками.
-Узлы такой сетки распределены сильно неравномерно со сгущением около оси стержня и разрежением у его поверхности. В работах [ссылки] предложен ряд способов как равномернее распределить узлы и, следовательно, повысить точность аппроксимации при том же количестве узлов.
+Узлы такой сетки распределены по объёму сильно неравномерно со сгущением около оси стержня и разрежением у его поверхности. В работах [ссылки] предложен ряд способов как равномернее распределить узлы и, следовательно, повысить точность аппроксимации при том же количестве узлов, однако реализацию этих методов мы оставили на будущее.
 
 %Для дискретизации по $x$ и по $r$ мы будем использовать базис Лежандра, причём по $x$ в качестве точек коллокации выбираются точки Гаусса-Лобатто, включающие границы, а по $r$ --- точки Гаусса-Радо, чтобы исключить центральную точку стержня ($r=0$). Пример такой сетки представлен на рисунке \ref{fig:grid} слева.
 
@@ -1321,13 +1326,24 @@ j_1 = 0,\dots, N_1-1, \quad &j_2 = 0,\dots, N_2-1,\\
 \label{3_ic_v}
 & V_0(x, r) = -\nu r \pdiff{U_0}{x},& &\dot{V}_0 (x, r) = -c \pdiff{V_0}{x}&
 \end{align}
-На рисунке~\ref{fig:evol_compar1} слева изображена эволюция этого импульса и зарождение солитона при $A_0=0.01$, $W=20$ в стержне из полистирола, характеристики которого представлены в таблице~\ref{tab:ps}. Исходный импульс испускает небольшие осцилляции и отрывается от них, что согласуется с моделью Буссинеска, согласно которой солитон распространяется со скоростью недоступной линейным волнам. На рисунке~\ref{fig:evol_compar1} справа представлено сравнение оторвавшегося в численном моделировании импульса (<<численного>> солитона) с <<теоретическим>> солитонном \eqref{soliton_v} из модели Буссинеска. Если скорость теоретического солитона, являющуюся свободным параметром в \eqref{soliton_v}, подобрать так, чтобы она совпадала со скоростью численного солитона, то последний имеет почти ту же длину, что и теоретический, но на 6\% большую амплитуду. Отметим, что формула \eqref{soliton_v} задаёт четыре солитона различной длины, однако при амплитуде около $0.01$ они практически идентичны.
+На рисунке~\ref{fig:evolution1} слева изображена эволюция этого импульса и зарождение солитона при $A_0=-0.01$, $W=20$ в стержне из полистирола, характеристики которого представлены в таблице~\ref{tab:ps}. Исходный импульс испускает небольшие осцилляции и отрывается от них, что согласуется с моделью Буссинеска, согласно которой солитон распространяется со скоростью недоступной линейным волнам. На рисунке~\ref{fig:evolution1} справа представлено сравнение оторвавшегося в численном моделировании импульса (<<численного>> солитона) с солитонном \eqref{soliton_v} из модели Буссинеска.
+Если скорость солитона Буссинеска, являющуюся свободным параметром в \eqref{soliton_v}, подобрать так, чтобы она совпадала со скоростью численного солитона, то последний имеет почти ту же длину, что и солитон Буссинеска, но на 6\% большую амплитуду.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.49\linewidth]{figures/SolEvol}
 	\includegraphics[width=0.49\linewidth]{figures/SolCompare}
-	\caption{Слева: решение задачи Коши с начальными условиями \eqref{3_ic_u}, \eqref{3_ic_v} при $A_0=0.01$, $W=20$ для полных уравнений. На графике изображены профили продольной деформации в центре стержня ($r=0$) в различные моменты времени:~$-U_x(x - ct, 0, t)$. Масштаб деформации показан чёрным прямоугольником.\\ Справа: сравнение профиля солитона, полученного в численном моделировании, и <<теоретического>> солитона \eqref{soliton_v}. Скорость теоретического солитона $v$ подобрана так, чтобы она совпадала со скоростью численного.}
-	\label{fig:evol_compar1}
+	\caption{Слева: решение задачи Коши с начальными условиями \eqref{3_ic_u}, \eqref{3_ic_v} при $A_0=-0.01$, $W=20$ для полных уравнений. На графике изображены профили продольной деформации $-U_x(x - ct, 0, t)$ в центре стержня ($r=0$) в различные моменты времени в движущейся со скоростью $c=\sqrt{E/\rho}$ системе координат. Масштаб деформации показан чёрным прямоугольником. На границах расчётной области задан поглощающий слой, чтобы волны, выходящие за левую границу области не входили справа.\\Справа: сравнение профиля солитона, полученного в численном моделировании, и солитона Буссинеска \eqref{soliton_v}, скорость $v$ которого подобрана так, чтобы она совпадала со скоростью численного солитона.}
+	\label{fig:evolution1}
+\end{figure}
+Отметим, что формула \eqref{soliton_v} задаёт четыре солитона различной длины, однако при амплитуде около $0.01$ они практически идентичны.
+
+На рисунке \ref{fig:evolution2} представлены результаты моделирования, аналогичного тому, что показано на рисунке \ref{fig:evolution1}, только с параметром $A_0=-0.05$. Исходная волна рождает два солитона, причём больший солитон движется быстрее меньшего. Сравнение большего солитона с регуляризованным солитоном Буссинеска показано на рисунке \ref{fig:evolution2} справа. При одинаковых скоростях численный солитон значительно длиннее и имеет примерно на 45\% большую амплитуду, чем солитон Буссинеска.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.49\linewidth]{figures/SolEvol2}
+	\includegraphics[width=0.49\linewidth]{figures/SolCompare2}
+	\caption{Слева: решение задачи Коши при $A_0=-0.05$, $W=20$. Справа: сравнение профиля численного солитона и регуляризованного солитона Буссинеска \eqref{soliton_v}, \eqref{B4mod}.}
+	\label{fig:evolution2}
 \end{figure}
 
 Теперь решим аналогичную задачу Коши для регуляризованного уравнения типа Буссинеска, где начальное условие задано формулой:
@@ -1336,23 +1352,25 @@ j_1 = 0,\dots, N_1-1, \quad &j_2 = 0,\dots, N_2-1,\\
 & u_0 (x) = 2A_0 \exp\lb \frac{(x - L/2)^2}{W^2}\rb,&  &\dot{u}_0 (x) = -c \pdiff{u_0}{x}.&
 \end{align}
 Отметим, что уравнение Буссинеска записано относительно функции $u = U_{x}$, а выражение поперечного перемещения $V$ через продольное $U$ уже <<вшито>> в модель.
-На рисунке~\ref{fig:evol_compar2} слева представлено сравнение эволюции импульса согласно полным уравнениям и согласно модели Буссинеска.
-Обе модели показывают качественно одинаковый результат, однако модель Буссинеска в этом эксперименте дала солитон примерно на 8\% большей амплитуды и, как следствие, бегущий быстрее солитона в полной модели.
+На рисунке~\ref{fig:evol_compare} слева представлено сравнение эволюции импульса согласно полным уравнениям и согласно модели Буссинеска.
+В первом случае ($A_0=-0.01$) обе модели показывают качественно одинаковый результат, однако модель Буссинеска дала солитон примерно на 8\% большей амплитуды и, как следствие, бегущий быстрее солитона в полной модели. Во втором случае ($A_0=-0.05$) в модели Буссинеска родилось три солитона, а в полной модели два. Меньший солитон в обеих моделях идентичен, а больший солитон в модели Буссинеска на 26\% выше, чем солитон в полной модели.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.49\linewidth]{figures/SolEvolCompare}
-	\includegraphics[width=0.49\linewidth]{figures/VelAmpl}
-	\caption{Слева: сравнение решения задачи Коши~\eqref{3_ic_u}, \eqref{3_ic_v} для полной модели и задачи Коши~\eqref{3_bq_ic} для регуляризованной модели Буссинеска. Справа: сравнение <<экспериментальной>> и <<теоретической>> зависимостей скорости от амплитуды. Горизонтальная линия -- скорость линейных продольных волн $c$.}
-	\label{fig:evol_compar2}
+	\includegraphics[width=0.49\linewidth]{figures/SolEvolCompare2}
+	\caption{Сравнение решения задачи Коши~\eqref{3_bq_ic} для регуляризованной модели Буссинеска и задачи Коши~\eqref{3_ic_u}, \eqref{3_ic_v} для полной модели с параметрами $A_0=-0.01$ (слева) и $A_0=-0.05$ (справа).}
+	\label{fig:evol_compare}
 \end{figure}
 
-Отличительной особенностью нелинейных волн является зависимость скорости от амплитуды волны. На основе численных решений задачи Коши для полных уравнений с начальными импульсами разной амплитуды можно построить <<экспериментальную>> зависимость скорости от амплитуды образовавшегося солитона и сравнить её с <<теоретической>>, задаваемой формулой \eqref{soliton_v}. Эти зависимости изображены на рисунке \ref{fig:evol_compar2} справа. Теоретическая зависимость для небольших амплитуд почти линейна, в то время как в численном эксперименте рост скорости солитона существенно замедляется с увеличением амплитуды.
-%\begin{figure}
-%	\centering
-%	\includegraphics[width=0.6\linewidth]{figures/vel_ampl}
-%	\caption{Сравнение <<экспериментальной>> и <<теоретической>> зависимостей скорости от амплитуды. Горизонтальная линия -- скорость линейных продольных волн $c$.}
-%	\label{fig:vel_ampl}
-%\end{figure}
+Отличительной особенностью нелинейных волн является зависимость скорости от амплитуды волны. 
+%На рисунке \ref{fig:vel_ampl} построены зависимости
+На основе численных решений задачи Коши для полных уравнений с начальными импульсами разной амплитуды мы построили зависимость скорости от амплитуды образовавшегося солитона и сравнили её с зависимостью в модели Буссинеска, задаваемой формулой \eqref{soliton_v} (см. рисунок \ref{fig:vel_ampl}). Зависимость скорости солитона Буссинеска для небольших амплитуд почти линейна, в то время как в полной модели рост скорости солитона существенно замедляется с увеличением амплитуды. На рисунке \ref{fig:vel_ampl} отчётливо виден асимптотический характер модели Буссинеска: чем меньше амплитуда волны, использовавшаяся как малый параметр $\varepsilon$ при выводе в параграфе \ref{sec:derivation}, тем больше соответствие полной модели.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.5\linewidth]{figures/VelAmpl}
+	\caption{Сравнение зависимостей скорости от амплитуды для полных уравнение и модели Буссинеска. Горизонтальная линия -- скорость линейных продольных волн $c$.}
+	\label{fig:vel_ampl}
+\end{figure}
 
 
 %\subsection{Образование солитона из бегущего по поверхности напряжения}
@@ -1372,7 +1390,7 @@ j_1 = 0,\dots, N_1-1, \quad &j_2 = 0,\dots, N_2-1,\\
 Модель типа Буссинеска строилась для бесконечного стержня, следовательно, она применима для описания волн вдали от торцов стержня. Моделирование волн вблизи торцов возможно с помощью полных уравнений \eqref{3_eqns_full} -- \eqref{3_strain} с нулевыми начальными условиями (отсутствие возмущения) следующими условиями на левой и правой границах стержня:
 \begin{align}
 \label{3_impact_stress}
-&P_{xx} = 0.2 \cosh\lb\frac t 2\rb^{-2}, \qquad P_{rx} = 0&  &\mbox{при}\quad x = 0,\\
+&P_{xx} = 0.2 \cosh^{-2}\lb\frac t 2\rb\mbox{ГПа}, \qquad P_{rx} = 0&  &\mbox{при}\quad x = 0,\\
 \label{3_impact_stress2}
 &P_{xx} = P_{rx} = 0&  &\mbox{при}\quad x = L
 \end{align}
@@ -1382,16 +1400,16 @@ j_1 = 0,\dots, N_1-1, \quad &j_2 = 0,\dots, N_2-1,\\
 	\centering
 	\includegraphics[width=0.545\linewidth]{figures/Impact}
 	\includegraphics[width=0.445\linewidth]{figures/ImpactBq}
-	\caption{Моделирование удара по торцу. Слева: решение задачи Коши \eqref{3_impact_stress}, \eqref{3_impact_stress2} для полных уравнений. Справа: решение задачи Коши \eqref{3_bq_ic_2} для резуляризованного уравнения Буссинеска.}
+	\caption{Моделирование удара по торцу. Слева: решение краевой задачи \eqref{3_impact_stress}, \eqref{3_impact_stress2} для полных уравнений. Справа: решение задачи Коши \eqref{3_bq_ic_2} для резуляризованного уравнения Буссинеска.}
 	\label{fig:impact}
 \end{figure}
 
-Сравним полученный результат с приближённой моделью Буссинеска. Мы не можем задать напряжение на торце стержня в этой модели, однако мы можем поставить начальное условие в виде узкого импульса, похожего по амплитуде и длине на тот, что образовался в первый момент времени на рисунке \ref{fig:impact}. Для этого мы использовали начальное условие в виде:
+Сравним полученный результат с приближённой моделью Буссинеска. Мы не можем задать напряжение на торце стержня в этой модели, однако мы можем поставить начальное условие в виде узкого импульса, похожего по амплитуде и длине на тот, что образовался в первый момент времени на рисунке \ref{fig:impact} слева. Для этого мы использовали начальное условие в виде:
 \begin{align}
 \label{3_bq_ic_2}
 & u_0 (x) = -0.072 \exp\lb \frac{x^2}{5^2}\rb,&  &\dot{u}_0 (x) = -c \pdiff{u_0}{x}.&
 \end{align}
-Результаты моделирования представлены на рисунке \ref{fig:impact} справа.
+Результаты моделирования представлены на рисунке \ref{fig:impact} справа. Обе модели дают похожий результат лишь с той разницей, что полная модель учитывает большее количество различных мелких вибраций, порождаемые вошедшим импульсом. Однако по скорости и форме родившиеся в обеих моделях солитоны близки, что свидетельствует о применимости модели Буссинеска для моделирования генерации солитонов из коротких волн, возникающих вследствие удара.
 %\begin{figure}[h]
 %	\centering
 %	\includegraphics[width=0.49\linewidth]{figures/ImpactBq}
@@ -1401,7 +1419,23 @@ j_1 = 0,\dots, N_1-1, \quad &j_2 = 0,\dots, N_2-1,\\
 %\end{figure}
 
 
-\subsection{Прохождение солитона через сдавленную область}
+\subsection{Образование солитона из удара по поверхности}
+Представляет интерес возможность возбуждения солитона с помощью воздействия не только на его торец, но и на боковою поверхность. Для этого зададим непродолжительное локализованное на небольшом участке в центре стержня нормальное напряжение:
+\begin{equation}\label{3_surf_imp}
+P_{rr} = 0.3 \cosh^{-2}\lb\frac{t}{10}\rb \cosh^{-2}\lb\frac{x}{10}\rb\mbox{ГПа}, \quad P_{xr} = 0, \quad \mbox{при} \quad r=R.
+\end{equation}
+Напомним, что в уравнении Буссинеска \eqref{3_bq_reg} нормальное граничное напряжение $P_{rr}$ обозначено как функция $P(x,t)$, а тангенциальное напряжение $P_{xr}$ как $T(x,t)$.
+
+Результаты моделирования согласно полной модели и согласно модели Буссинеска представлены на рисунке \ref{fig:surf_impact}. Моделирование проводилось на отрезке $-2000<x<2000$, однако в силу симметричности результата относительно нуля мы показываем только правую часть этого промежутка. Зависимости напряжения $P_{rr}$ от $x$ и $r$ представлены на горизонтальном и вертикальном подграфиках соответственно.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{figures/SurfImpact}
+	%\includegraphics[width=0.445\linewidth]{figures/SurfImpactBq}
+	\caption{Моделирование удара по поверхности \eqref{3_surf_imp} в полных уравнениях (слева) и в регуляризованной модели Буссинеска (справа).}
+	\label{fig:surf_impact}
+\end{figure}
+
+В полной модели непродолжительное воздействие на стержень формирует импульс, который потом разделяется на мелкие осцилляции и солитон. В модели Буссинеска формируется солитон с большей амплитудой и скоростью, чем в полной модели, а мелких осцилляций практически нет. Отметим, что созданная внешним воздействием деформация около $x=0$ никуда не движется, что является существенным недостатком модели Буссинеска в этом численном моделировании. 
 
 
 %\subsection{О применении полученных результатов для возбуждения солитонов}
@@ -1412,6 +1446,30 @@ j_1 = 0,\dots, N_1-1, \quad &j_2 = 0,\dots, N_2-1,\\
 
 \chapter*{Заключение}
 \addcontentsline{toc}{chapter}{Заключение}
+
+В настоящей работе получены следующие результаты:
+\begin{enumerate}
+	\item Выведены две новые асимптотические модели типа Буссинеска, описывающие длинные продольные волны в стержнях круглого сечения. Эти модели обобщены на случай ненулевой осесимметричной нагрузки на боковой поверхности, а также на случай предварительно растянутого стержня. Установлено, что новые модели:
+	\begin{itemize}[noitemsep,topsep=1pt]
+		\item имеют семейство решений в виде солитонов деформации;
+		\item асимптотически эквивалентны моделям, выведенным ранее;
+		\item обладают лучшими дисперсионными свойствами, чем модели, выведенные ранее.
+	\end{itemize}
+
+	\item Построен метод, позволяющий численно моделировать полные трёхмерные уравнения. В серии численных экспериментов показано, что:
+	\begin{itemize}[noitemsep,topsep=1pt]
+		\item в полной модели, как и в модели Буссинеска, формируются солитоны;
+		\item чем меньше амплитуда солитона, тем более схожи его свойства в полной модели и модели Буссинеска, а именно, зависимость его скорости от амплитуды;
+		\item солитоны деформации могут быть возбуждены с помощью воздействия на поверхность стержня (удара), причём модель Буссинеска даёт схожие с полной моделью солитоны.
+	\end{itemize}
+\end{enumerate}
+
+Результаты настоящей работы могут быть полезны для экспериментального обнаружения солитонов деформации, поскольку, несмотря на многочисленные попытки, надёжных результатов, свидетельствующих об их существовании, до сих пор нет.
+
+Настоящая работа предполагает продолжение исследования нелинейных волн деформации. Во-первых, представляет научный интерес получение асимптотических моделей в волноводах другой геометрии: в стержне прямоугольного сечения, в тонкостенной оболочке и др. Во-вторых, естественным продолжением этого исследования является попытка учёта в модели вязкоупругого эффекта, приводящего к диссипации энергии и затуханию волн. В-третьих, построенный многодоменный псевдоспектральный метод позволяет легко моделировать волны в многослойных структурах, в частности, в композитах с неидеальным контактом слоёв. Такое исследование может быть применено в дефектоскопии для обнаружения областей расслоения многослойных композитов.
+
+
+
 
 
 \begin{thebibliography}{99}
