--- a/ThesisFull.tex
+++ b/ThesisFull.tex
@@ -159,7 +159,7 @@
 
 	\vspace{20mm}
 	\begin{flushleft}
-	\begin{tabularx}{\linewidth}{Xl}
+	\begin{tabularx}{\linewidth}{Xr}
 		Выполнил & \\
 		студент гр. 23641/1 & Ф.\,E.~Гарбузов  \\ 
 		\vspace{3mm}
